--- a/backend/public/stylesheet/register.css
+++ b/backend/public/stylesheet/register.css
@@ -7,43 +7,37 @@ body {
     margin: 0;
     background-color: #f4f4f4;
 }
-
-.login-container {
+.register-container{
     background: #fff;
     padding: 20px;
     border-radius: 5px;
     height: 60%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 300px;
-    margin-right: 50px;
-
 }
-
-h2 {
+h3{
     margin-bottom: 20px;
     font-size: 24px;
     color: #333;
 }
 
-.form-group {
+.form{
     margin-bottom: 15px;
-
 }
-
-.form-group label {
+.form label {
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
 }
 
-.form-group input {
+.form input {
     width: 100%;
     padding: 8px;
     box-sizing: border-box;
     border: 1px solid #ddd;
     border-radius: 3px;
-}
 
+}
 button {
     width: 100%;
     padding: 10px;
@@ -54,12 +48,14 @@ button {
     cursor: pointer;
     font-size: 16px;
 }
-
 button:hover {
     background-color: #0056b3;
 }
 
-#error-message {
+#errorMessage {
     color: red;
     margin-top: 10px;
 }
+/*footer{*/
+/*    text-align: center;*/
+/*}*/
