--- a/backend/public/stylesheet/login.css
+++ b/backend/public/stylesheet/login.css
@@ -13,7 +13,7 @@ body {
 nav {
     position: absolute;
     top: 0;
-    left: 0;
+    left: 50;
     width: 100%;
     background-color: #333;
     padding: 10px;
@@ -53,7 +53,7 @@ nav ul li {
     padding: 20px;
     border-radius: 5px;
     height: 60%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgb(160, 149, 149);
     width: 300px;
     margin-right: 50px;
 }
@@ -85,14 +85,34 @@ h2 {
 }
 
 /* Styling for the login button */
-button {
+#Dashboard {
     width: 100%;
     padding: 10px;
-    background-color: #007bff;
+    background-color: #315e8f;
     color: #fff;
-    border: none;
-    border-radius: 3px;
+    border: solid;
+    border-radius: 10px;
     cursor: pointer;
+    font-size: 16px;
+}
+#logoutButton {
+    width: 100%;
+    padding: 10px;
+    background-color: #315e8f;
+    color: #fff;
+    border: solid;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 16px;
+}
+#submit{
+    width: 100%;
+    padding:10px;
+    background-color:#315e8f;
+    color:#fff;
+    border:solid;
+    border-radius: 10px;
+    cursor:pointer;
     font-size: 16px;
 }
 
