--- a/backend/public/stylesheet/password_forgot.css
+++ b/backend/public/stylesheet/password_forgot.css
@@ -20,12 +20,42 @@ body{
     margin-right: 50px;
     margin-left: 20px;
 }
+.text h4{
+    font-size:24px;
+}
+.text .Email-auth #email{
+    font-size: 24px;
+    width: 100%;
+    border: 1px solid #ccc;
+}
+.text .Email-auth #emailSubmit{
+    display: flex;
+    
+    margin-bottom:24px;
+}
+
+.forgetPassword .text  #emailSubmit{
+    width: 100%;
+    padding:10px;
+    background-color: #315e8f;
+    color:#fff;
+    text-align: center;
+    cursor: pointer;
+    font-size: 16px;
+    border: solid;
+    border-radius: 8px;
+    margin-top: 20px;
+    /* text-align: center; */
+    display: flex;
+    justify-content: center;
+}
 
 .phoneNumber ,.code-inputs{
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 20px;
 }
+
 .phoneNumber input,.code-inputs input{
     width: 30px;
     height: 50px;
