Update Password controller is implemented

--- a/backend/public/stylesheet/reset-password.css
+++ b/backend/public/stylesheet/reset-password.css
@@ -16,13 +16,13 @@ form#reset{
     box-shadow: 0px 4px 8px rgba(0,0,0,0.1);
 }
 
-.reset-pass label , .reEnterPass label {
+.reset-pass label , .reEnterPass label,.phoneNumber label {
     display:block;
     font-weight: bold;
     margin-bottom: 5px;
 }
 
-.reset-pass input, .reEnterPass input {
+.reset-pass input, .reEnterPass input,.phoneNumber input {
     width: 100%;  /* Adjust to take full width */
     font-size: 20px; /* Increased font size */
     padding: 8px;
